# liubinzi

./: .dockerignore  .env  .env.example  .env.example.api  .env.test  .eslintrc.json  .gitignore  .prettierignore  ANALYTICS_MODULE.md  ANALYTICS_SETUP.md  AUTH_IMPLEMENTATION.md  COMMENTS_FEATURE.md  COMMENTS_IMPLEMENTATION_SUMMARY.md  COMMENTS_REACTIONS_BACKEND.md  COMPONENTS_GUIDE.md  CONTENT_BACKEND_SUMMARY.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SETUP.md  LICENSE  MEDIA_SETUP.md  MVP_LAUNCH_CHECKLIST.md  README.md  SMOKE_TESTS.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  components.json  compose.yml  docker-compose.yaml  docker-compose.yml  eslint.config.js  eslint.config.mjs  index.html  jest.config.js  jest.config.ts  middleware.js  middleware.ts  next.config.js  next.config.mjs  (+20 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241024_0001_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  events.py  logging.py  middleware.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/hardware/: __init__.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: data.py  hardware.py  service.py  system.py  token.py  user.py
backend/app/security/: __init__.py  api_key.py  jwt.py  password.py
backend/app/services/: __init__.py  authentication.py  cache.py  data_processing.py  http_client.py  messaging.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_health.py  test_services.py
(+275 files in other folders)
