[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-control-service"
version = "0.1.0"
description = "FastAPI microservice for hardware control and microservice orchestration"
readme = "README.md"
authors = [{name = "liubinzi", email = "maintainers@example.com"}]
keywords = ["fastapi", "microservices", "hardware", "sqlalchemy"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.23,<0.31",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "httpx>=0.25,<1.0",
    "tenacity>=8.2,<9.0",
    "redis>=5.0,<6.0",
    "structlog>=23.1,<24.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "python-multipart>=0.0.7,<0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8.0",
    "pytest-asyncio>=0.21,<0.22",
    "pytest-cov>=4.1,<5.0"
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools]
package-dir = {"" = "app"}
